# rules_kotlin

./: .bazelignore  .bazelproject  WORKSPACE
examples/dagger/: BUILD
examples/plugin/src/allopen/: BUILD
examples/plugin/src/noarg/: BUILD
examples/plugin/src/sam_with_receiver/: BUILD
examples/plugin/src/serialization/: BUILD
kotlin/: BUILD
kotlin/internal/: BUILD  compiler_plugins.bzl  defs.bzl  defs.release.bzl  toolchains.bzl
kotlin/internal/jvm/: BUILD  android.bzl  compile.bzl  jvm.bzl
kotlin/internal/repositories/: BUILD  BUILD.com_github_jetbrains_kotlin  download.bzl  release_repositories.bzl  repositories.bzl  setup.bzl  vars.bzl  vars.release.bzl
scripts/: release.sh
src/main/kotlin/: BUILD
src/main/kotlin/io/bazel/cli/: Arguments.kt  BUILD.bazel  Command.kt
src/main/kotlin/io/bazel/kotlin/builder/: KotlinBuilderComponent.java
src/main/kotlin/io/bazel/kotlin/builder/daemon/: BUILD.bazel  KtClient.kt  KtDaemon.kt
src/main/kotlin/io/bazel/kotlin/builder/tasks/: BUILD.bazel  BazelWorker.kt  KotlinBuilder.kt
src/main/kotlin/io/bazel/kotlin/builder/tasks/jvm/: JavaCompiler.kt  KotlinJvmTaskExecutor.kt  compilation_task.kt
src/main/kotlin/io/bazel/kotlin/builder/toolchain/: BUILD.bazel  CompilationTaskContext.kt  KotlinToolchain.kt
src/main/kotlin/io/bazel/kotlin/builder/utils/: ArgMap.kt  BUILD.bazel  BazelUtils.kt  IOUtils.kt
src/main/kotlin/io/bazel/kotlin/compiler/: BUILD.bazel  BUILD.release.bazel
src/main/kotlin/io/bazel/kotlin/plugin/: BUILD.bazel
src/main/kotlin/io/bazel/worker/: BUILD.bazel  IO.kt  InvocationWorker.kt  PersistentWorker.kt  Work.kt  Worker.kt
src/main/protobuf/: kotlin_model.proto
src/test/data/jvm/basic/: BUILD
src/test/data/jvm/kapt/: BUILD
src/test/kotlin/io/bazel/kotlin/: BUILD  defs.bzl
src/test/kotlin/io/bazel/kotlin/builder/: BUILD  Deps.java  KotlinAbstractTestBuilder.java  KotlinJvmTestBuilder.java
src/test/kotlin/io/bazel/kotlin/builder/tasks/: BUILD.bazel
src/test/kotlin/io/bazel/kotlin/builder/tasks/jvm/: KotlinBuilderJvmAbiTest.java  KotlinBuilderJvmBasicTest.java  KotlinWorkerTest.kt
src/test/kotlin/io/bazel/kotlin/builder/utils/: ArgMapTest.kt  BUILD.bazel
src/test/kotlin/io/bazel/kotlin/cli/: ArgumentsTest.kt  BUILD.bazel
src/test/kotlin/io/bazel/kotlin/worker/: BUILD.bazel  IOTest.kt  InvocationWorkerTest.kt  PersistentWorkerTest.kt  WorkerContextTest.kt  WorkerEnvironment.kt  WorkerEnvironmentTest.kt
