load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "ArgumentsTest",
    srcs = [
        "ArgumentsTest.kt",
    ],
    test_class = "io.bazel.kotlin.cli.ArgumentsTest",
    deps = [
        "//src/main/kotlin/io/bazel/cli",
        "@com_github_jetbrains_kotlin//:kotlin-test",
        "@kotlin_rules_maven//:com_google_truth_truth",
    ],
)
